# vector-db-test

./: Dockerfile  README.md  appmap.yml  docker-compose.yml  poetry.toml  pyproject.toml
data/: Artificial intelligence.txt  Data analysis.txt  Data mining.txt  Data science.txt  Data structure.txt  Data visualization.txt  Economic growth.txt  Machine learning.txt  New York City.txt  Python (programming language).txt
tests/: test_searcher.py  test_vectorizer.py  test_wiki_article_downloader.py
vector/: run.py
vector/core/: data_processing.py  searcher.py  vectorizer.py
vector/static/: index.html
vector/utils/: data_reader.py  wiki_article_downloader.py
